chore: comment out npm registry configuration in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -45,8 +45,8 @@ updates:
         patterns:
           - "*"
 
-registries:
-  npm_public_registry:
-    type: "npm-registry"
-    url: "https://registry.npmjs.org/"
-    token: ${{ secrets.TOKEN }}
+# registries:
+#   npm_public_registry:
+#     type: "npm-registry"
+#     url: "https://registry.npmjs.org/"
+#     token: ${{ secrets.TOKEN }}
