--- a/azure.yaml
+++ b/azure.yaml
@@ -9,8 +9,8 @@ name: agentic-applications-for-unified-data-foundation
 requiredVersions:
   azd: ">= 1.15.0"
 
-# metadata:
-#   template: agentic-applications-for-unified-data-foundation@1.0
+metadata:
+  template: agentic-applications-for-unified-data-foundation@1.0
 
 hooks:
   postprovision:
