feat: replace Semantic Kernel with Agent Framework code

--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -12,6 +12,7 @@ types-requests==2.32.4.20250611
 aiohttp==3.12.9
 
 # Azure Services
+agent-framework
 azure-identity==1.23.0
 azure-search-documents==11.6.0b12
 azure-ai-projects==1.0.0b12 # azure-ai-projects==1.1.0b2 --pre
@@ -20,7 +21,7 @@ azure-ai-inference==1.0.0b9
 azure-cosmos==4.9.0
 
 # Additional utilities
-semantic-kernel[azure]==1.32.2
+# semantic-kernel[azure]==1.32.2
 openai==1.93.0
 pyodbc==5.2.0
 pandas==2.3.0
