Remove excessive logging from controllers and middleware

--- a/src/api/dotnet/Properties/launchSettings.json
+++ b/src/api/dotnet/Properties/launchSettings.json
@@ -5,7 +5,31 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:8000"
+      "applicationUrl": "http://localhost:8000",
+      "environmentVariables": {
+        "AGENT_ID_ORCHESTRATOR": "asst_xPHv99Kj9eiDvsQulSuOpxLh",
+        "API_UID": "ea5a9210-8eb8-4e5e-b10a-396d926fd875",
+        "APP_ENV": "dev",
+        "APPINSIGHTS_INSTRUMENTATIONKEY": "77c00f31-7b25-4330-9d9e-7d12cae96a73",
+        "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=77c00f31-7b25-4330-9d9e-7d12cae96a73;IngestionEndpoint=https://francecentral-1.in.applicationinsights.azure.com/;LiveEndpoint=https://francecentral.livediagnostics.monitor.azure.com/;ApplicationId=35763067-6250-44a2-b827-2a4ea980559e",
+        "AZURE_AI_AGENT_API_VERSION": "2025-05-01",
+        "AZURE_AI_AGENT_ENDPOINT": "https://aisa-daap6gmk7fcigh.services.ai.azure.com/api/projects/aifp-daap6gmk7fcigh",
+        "AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME": "gpt-4o-mini",
+        "AZURE_OPENAI_API_VERSION": "2025-01-01-preview",
+        "AZURE_OPENAI_DEPLOYMENT_MODEL": "gpt-4o-mini",
+        "AZURE_OPENAI_ENDPOINT": "https://aisa-daap6gmk7fcigh.openai.azure.com/",
+        "AZURE_OPENAI_RESOURCE": "aisa-daap6gmk7fcigh",
+        "DISPLAY_CHART_DEFAULT": "False",
+        "DUMMY_TEST": "True",
+        "FABRIC_SQL_CONNECTION_STRING": "DRIVER={ODBC Driver 18 for SQL Server};SERVER=ccllgusga4suzkb52t4j7lpn7y-xuatmmo7qlrudpa6nmiyztcx7u.database.fabric.microsoft.com;DATABASE={retail_sqldatabase_daap6gmk7fcigh-e3071789-0792-4ba4-977f-13b7847eb38c};UID=ea5a9210-8eb8-4e5e-b10a-396d926fd875;Authentication=ActiveDirectoryMSI",
+        "FABRIC_SQL_DATABASE": "{retail_sqldatabase_daap6gmk7fcigh-e3071789-0792-4ba4-977f-13b7847eb38c}",
+        "FABRIC_SQL_SERVER": "ccllgusga4suzkb52t4j7lpn7y-xuatmmo7qlrudpa6nmiyztcx7u.database.fabric.microsoft.com",
+        "REACT_APP_LAYOUT_CONFIG": "{\r\n  \"appConfig\": {\r\n      \"CHAT_CHATHISTORY\": {\r\n        \"CHAT\": 70,\r\n        \"CHATHISTORY\": 30\r\n      }\r\n    }\r\n  }\r\n}",
+        "SOLUTION_NAME": "daap6gmk7fcigh",
+        "USE_AI_PROJECT_CLIENT": "True",
+        "USE_CHAT_HISTORY_ENABLED": "True",
+        "WEBSITE_HTTPLOGGING_RETENTION_DAYS": "1"
+      }
     }
   }
 }
