--- a/src/api/dotnet/appsettings.json.sample
+++ b/src/api/dotnet/appsettings.json.sample
@@ -14,6 +14,7 @@
   "FABRIC_SQL_SERVER": "",
   "APP_ENV": "dev",
   "AGENT_ID_ORCHESTRATOR": "",
+  "AGENT_ID_TITLE": ""
   "API_UID": "",
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
