--- a/src/api/python/requirements.txt
+++ b/src/api/python/requirements.txt
@@ -14,10 +14,10 @@ aiohttp==3.13.0
 # Azure Services
 agent-framework==1.0.0b251016
 azure-identity==1.25.1
-azure-search-documents==11.6.0
+# azure-search-documents==11.6.0  
 azure-ai-projects==1.0.0 # azure-ai-projects==1.1.0b2 --pre
-# azure-ai-agents==1.2.0b1 --pre
-azure-ai-inference==1.0.0b9
+# azure-ai-agents==1.2.0b1 --pre  
+# azure-ai-inference==1.0.0b9  
 azure-cosmos==4.9.0
 
 # Additional utilities
