--- a/src/App/package.json
+++ b/src/App/package.json
@@ -7,6 +7,7 @@
     "@fluentui/react": "^8.123.0",
     "@azure/msal-react": "^3.0.14",
     "@azure/msal-browser": "^4.13.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@fluentui/react-icons": "^2.0.305",
     "@fluentui/react-components": "^9.66.5",
@@ -26,6 +27,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "rehype-raw": "^7.0.0",
     "lodash-es": "^4.17.21",
     "react-scripts": "5.0.1",
