Agent creation python script updated to support Foundry v2.0

--- a/src/api/python/.env.sample
+++ b/src/api/python/.env.sample
@@ -1,5 +1,5 @@
-AGENT_ID_ORCHESTRATOR=
-AGENT_ID_TITLE=
+AGENT_NAME_CHAT=
+AGENT_NAME_TITLE=
 API_UID=""
 APP_ENV="dev"
 APPINSIGHTS_INSTRUMENTATIONKEY=
