--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -1,5 +1,16 @@
 name: Deploy-Test-Cleanup (v2) Linux
 on:
+  pull_request:
+    branches:
+      - main
+  workflow_run:
+    workflows: ["Build Docker and Optional Push - Agentic Applications for Unified Data Foundation"]
+    types:
+      - completed
+    branches:
+      - main
+      - dev
+      - demo
   workflow_dispatch:
     inputs:
       azure_location:
@@ -74,7 +85,7 @@ on:
         type: string
         
   schedule:
-    - cron: '0 9,21 * * *'  # Runs at 9:00 AM and 9:00 PM GMT
+    - cron: "0 5,17 * * *" # Runs at 5:00 AM and 5:00 PM GMT
 
 jobs:
   Run:
