--- a/.github/workflows/deploy-windows.yml
+++ b/.github/workflows/deploy-windows.yml
@@ -4,7 +4,7 @@ on:
   #   branches:
   #     - main
   # workflow_run:
-  #   workflows: ["Build Docker and Optional Push"]
+  #   workflows: ["Build Docker and Optional Push - Agentic Applications for Unified Data Foundation"]
   #   types:
   #     - completed
   #   branches:
@@ -85,7 +85,7 @@ on:
         type: string
         
   # schedule:
-  #   - cron: '0 9,21 * * *'  # Runs at 9:00 AM and 9:00 PM GMT
+  #   - cron: "0 5,17 * * *" # Runs at 5:00 AM and 5:00 PM GMT
 
 jobs:
   Run:
