--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,10 @@ on:
       - main
       - dev
       - demo
+    paths:
+      - 'src/App/**'
+      - 'src/api/**'
+      - '.github/workflows/docker-build.yml'
   pull_request:
     types:
       - opened
@@ -16,6 +20,10 @@ on:
       - main
       - dev
       - demo
+    paths:
+      - 'src/App/**'
+      - 'src/api/**'
+      - '.github/workflows/docker-build.yml'
   workflow_dispatch:
 
 jobs:
@@ -60,7 +68,23 @@ jobs:
           echo "tagname=default" >> $GITHUB_OUTPUT
        
          fi
+
+      - name: Detect Changed Files
+        id: changes
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            frontend:
+              - 'src/App/**'
+            python-api:
+              - 'src/api/python/**'
+            dotnet-api:
+              - 'src/api/dotnet/**'
+            workflow:
+              - '.github/workflows/docker-build.yml'
+
       - name: Build and Push Docker Image for WebApp
+        if: ${{ steps.changes.outputs.frontend == 'true' || steps.changes.outputs.workflow == 'true' || github.event_name == 'workflow_dispatch' }}
         uses: docker/build-push-action@v6
         with:
           context: ./src/App
@@ -70,7 +94,8 @@ jobs:
             ${{ secrets.ACR_LOGIN_SERVER || 'acrlogin.azurecr.io' }}/da-app:${{ steps.determine_tag.outputs.tagname }}
             ${{ secrets.ACR_LOGIN_SERVER || 'acrlogin.azurecr.io' }}/da-app:${{ steps.determine_tag.outputs.tagname }}_${{ steps.date.outputs.date }}_${{ github.run_number }}
 
-      - name: Build and Push Docker Image for api
+      - name: Build and Push Docker Image for Python API
+        if: ${{ steps.changes.outputs.python-api == 'true' || steps.changes.outputs.workflow == 'true' || github.event_name == 'workflow_dispatch' }}
         uses: docker/build-push-action@v6
         with:
           context: ./src/api/python
@@ -80,7 +105,8 @@ jobs:
             ${{ secrets.ACR_LOGIN_SERVER || 'acrlogin.azurecr.io' }}/da-api:${{ steps.determine_tag.outputs.tagname }}
             ${{ secrets.ACR_LOGIN_SERVER || 'acrlogin.azurecr.io' }}/da-api:${{ steps.determine_tag.outputs.tagname }}_${{ steps.date.outputs.date }}_${{ github.run_number }}
 
-      - name: Build and Push Docker Image for CsApi
+      - name: Build and Push Docker Image for .NET API
+        if: ${{ steps.changes.outputs.dotnet-api == 'true' || steps.changes.outputs.workflow == 'true' || github.event_name == 'workflow_dispatch' }}
         uses: docker/build-push-action@v6
         with:
           context: ./src/api/dotnet
