updated env var names in sample

--- a/src/api/dotnet/appsettings.json.sample
+++ b/src/api/dotnet/appsettings.json.sample
@@ -13,8 +13,8 @@
   "FABRIC_SQL_DATABASE": "",
   "FABRIC_SQL_SERVER": "",
   "APP_ENV": "dev",
-  "AGENT_ID_ORCHESTRATOR": "",
-  "AGENT_ID_TITLE": ""
+  "AGENT_NAME_CHAT": "",
+  "AGENT_NAME_TITLE": "",
   "API_UID": "",
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
