--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,12 +46,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python', 'csharp' ]
+        language: [ 'python' ]
         # CodeQL supports [ 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift' ]
         # Use only 'java-kotlin' to analyze code written in Java, Kotlin or both
         # Use only 'javascript-typescript' to analyze code written in JavaScript, TypeScript or both
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
-        dotnet-version: ['8.x']
+        dot-version: ['3.1.x']
 
     steps:
     - name: Checkout repository
