updated image tag to be latest_v2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -167,13 +167,13 @@ jobs:
 
           # set image tag based on branch
           if [[ "${{ env.BRANCH_NAME }}" == "main" ]]; then
-            IMAGE_TAG="latest"
+            IMAGE_TAG="latest_v2"
           elif [[ "${{ env.BRANCH_NAME }}" == "dev" ]]; then
             IMAGE_TAG="dev"
           elif [[ "${{ env.BRANCH_NAME }}" == "demo" ]]; then
             IMAGE_TAG="demo"
           else
-            IMAGE_TAG="latest"
+            IMAGE_TAG="latest_v2"
           fi
           echo "Using IMAGE_TAG: ${IMAGE_TAG}"
 
