feat: add AZURE_ENV_USE_CASES parameter to deployment workflows and documentation

--- a/.github/workflows/job-deploy-linux.yml
+++ b/.github/workflows/job-deploy-linux.yml
@@ -28,6 +28,10 @@ on:
         required: false
         type: string
         default: 'python'
+      AZURE_ENV_USE_CASES:
+        required: false
+        type: string
+        default: 'Retail-sales-analysis'
       AZURE_ENV_LOG_ANALYTICS_WORKSPACE_ID:
         required: false
         type: string
@@ -117,6 +121,7 @@ jobs:
           azd env set AZURE_RESOURCE_GROUP="${{ inputs.RESOURCE_GROUP_NAME }}"
           azd env set AZURE_ENV_IMAGETAG="${{ inputs.IMAGE_TAG }}"
           azd env set BACKEND_RUNTIME_STACK="${{ inputs.BACKEND_RUNTIME_STACK }}"
+          azd env set AZURE_ENV_USE_CASES="${{ inputs.AZURE_ENV_USE_CASES }}"
           
           # Set ACR name only when building Docker image
           if [[ "${{ inputs.BUILD_DOCKER_IMAGE }}" == "true" ]]; then
