--- a/.github/workflows/job-deploy.yml
+++ b/.github/workflows/job-deploy.yml
@@ -26,6 +26,11 @@ on:
         type: 'string'
         required: false
         default: 'python'
+      AZURE_ENV_USE_CASES:
+        description: 'Specify use cases to deploy'
+        type: 'string'
+        required: false
+        default: 'Retail-sales-analysis'
       EXP:
         description: 'Enable EXP'
         required: false
@@ -367,6 +372,7 @@ jobs:
       BUILD_DOCKER_IMAGE: ${{ inputs.build_docker_image || 'false' }}
       EXP: ${{ inputs.EXP || 'false' }}
       BACKEND_RUNTIME_STACK: ${{ needs.azure-setup.outputs.BACKEND_RUNTIME_STACK }}
+      AZURE_ENV_USE_CASES: ${{ inputs.AZURE_ENV_USE_CASES }}
       AZURE_ENV_LOG_ANALYTICS_WORKSPACE_ID: ${{ inputs.AZURE_ENV_LOG_ANALYTICS_WORKSPACE_ID }}
       AZURE_EXISTING_AI_PROJECT_RESOURCE_ID: ${{ inputs.AZURE_EXISTING_AI_PROJECT_RESOURCE_ID }}
     secrets: inherit
@@ -385,6 +391,7 @@ jobs:
       BUILD_DOCKER_IMAGE: ${{ inputs.build_docker_image || 'false' }}
       EXP: ${{ inputs.EXP || 'false' }}
       BACKEND_RUNTIME_STACK: ${{ needs.azure-setup.outputs.BACKEND_RUNTIME_STACK }}
+      AZURE_ENV_USE_CASES: ${{ inputs.AZURE_ENV_USE_CASES }}
       AZURE_ENV_LOG_ANALYTICS_WORKSPACE_ID: ${{ inputs.AZURE_ENV_LOG_ANALYTICS_WORKSPACE_ID }}
       AZURE_EXISTING_AI_PROJECT_RESOURCE_ID: ${{ inputs.AZURE_EXISTING_AI_PROJECT_RESOURCE_ID }}
     secrets: inherit
