--- a/.github/workflows/deploy-windows.yml
+++ b/.github/workflows/deploy-windows.yml
@@ -41,6 +41,14 @@ on:
           - 'dotnet'
         required: false
         default: 'python'
+      AZURE_ENV_USE_CASES:
+        description: 'Specify use cases to deploy'
+        type: 'choice'
+        options:
+          - 'Retail-sales-analysis'
+          - 'Insurance-improve-customer-meetings'
+        required: false
+        default: 'Retail-sales-analysis'
       EXP:
         description: 'Enable EXP'
         required: false
@@ -95,6 +103,7 @@ jobs:
       azure_location: ${{ github.event.inputs.azure_location || 'australiaeast' }}
       resource_group_name: ${{ github.event.inputs.resource_group_name || '' }}
       BACKEND_RUNTIME_STACK: ${{ github.event.inputs.BACKEND_RUNTIME_STACK || 'python' }}
+      AZURE_ENV_USE_CASES: ${{ github.event.inputs.AZURE_ENV_USE_CASES || 'Retail-sales-analysis' }}
       EXP: ${{ github.event.inputs.EXP == 'true' }}
       build_docker_image: ${{ github.event.inputs.build_docker_image == 'true' }}
       cleanup_resources: ${{ github.event.inputs.cleanup_resources == 'true' }}
