fix: rename AZURE_ENV_USE_CASES to AZURE_ENV_USE_CASE

--- a/.github/workflows/deploy-orchestrator.yml
+++ b/.github/workflows/deploy-orchestrator.yml
@@ -22,7 +22,7 @@ on:
         type: 'string'
         required: false
         default: 'python'
-      AZURE_ENV_USE_CASES:
+      AZURE_ENV_USE_CASE:
         description: 'Specify use cases to deploy'
         type: 'string'
         required: false
@@ -89,7 +89,7 @@ jobs:
       azure_location: ${{ inputs.azure_location }}
       resource_group_name: ${{ inputs.resource_group_name }}
       BACKEND_RUNTIME_STACK: ${{ inputs.BACKEND_RUNTIME_STACK }}
-      AZURE_ENV_USE_CASES: ${{ inputs.AZURE_ENV_USE_CASES }}
+      AZURE_ENV_USE_CASE: ${{ inputs.AZURE_ENV_USE_CASE }}
       EXP: ${{ inputs.EXP }}
       build_docker_image: ${{ inputs.build_docker_image }}
       existing_webapp_url: ${{ inputs.existing_webapp_url }}
