--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -42,7 +42,7 @@ on:
         required: false
         default: 'python'
 
-      AZURE_ENV_USE_CASES:
+      AZURE_ENV_USE_CASE:
         description: 'Specify Use case to deploy'
         type: 'choice'
         options:
@@ -104,7 +104,7 @@ jobs:
       azure_location: ${{ github.event.inputs.azure_location || 'australiaeast' }}
       resource_group_name: ${{ github.event.inputs.resource_group_name || '' }}
       BACKEND_RUNTIME_STACK: ${{ github.event.inputs.BACKEND_RUNTIME_STACK || 'python' }}
-      AZURE_ENV_USE_CASES: ${{ github.event.inputs.AZURE_ENV_USE_CASES || 'Retail-sales-analysis' }}
+      AZURE_ENV_USE_CASE: ${{ github.event.inputs.AZURE_ENV_USE_CASE || 'Retail-sales-analysis' }}
       EXP: ${{ github.event.inputs.EXP == 'true' }}
       build_docker_image: ${{ github.event.inputs.build_docker_image == 'true' }}
       cleanup_resources: ${{ github.event.inputs.cleanup_resources == 'true' }}
