Optimized ci/cd pipeline

--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -3,6 +3,16 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - 'infra/**'
+      - '.github/workflows/deploy-linux.yml'
+      - '.github/workflows/deploy-orchestrator.yml'
+      - '.github/workflows/job-*.yml'
+      - '.github/workflows/test-automation-v2.yml'
+      - 'azure.yaml'
+      - '**/*.Dockerfile'
+      - '**/requirements.txt'
   workflow_run:
     workflows: ["Build Docker and Optional Push - Agentic Applications for Unified Data Foundation"]
     types:
