--- a/.github/workflows/deploy-linux.yml
+++ b/.github/workflows/deploy-linux.yml
@@ -1,8 +1,10 @@
 name: Deploy-Test-Cleanup (v2) Linux
 on:
-  pull_request:
+  push:
     branches:
       - main
+      - dev
+      - demo
     paths:
       - 'src/**'
       - 'infra/**'
