--- a/.github/workflows/deploy-orchestrator.yml
+++ b/.github/workflows/deploy-orchestrator.yml
@@ -111,6 +111,7 @@ jobs:
     with:
       TEST_URL: ${{ needs.deploy.outputs.WEB_APPURL || inputs.existing_webapp_url }}
       TEST_SUITE: ${{ inputs.trigger_type == 'workflow_dispatch' && inputs.run_e2e_tests || 'GoldenPath-Testing' }}
+      AZURE_ENV_USE_CASE: ${{ inputs.AZURE_ENV_USE_CASE }}
     secrets: inherit
 
   send-notification:
